--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-
-    <!-- Latest compiled and minified JavaScript -->
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid" >
-    <div>
-        <a href="index.html" class="navbar-brand">Sparkle</a>
-    </div>
-        <ul class="nav navbar-nav">
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-left">
             <li class="dropdown">
                 <a href="#" class="dropdown-backdrop" data-toggle="dropdown" role="button"
                    aria-haspopup="true" aria-expanded="false">User Name<span class="caret"></span></a>
@@ -29,6 +22,9 @@
                     <li><a href="#">Add new event</a></li>
                 </ul>
             </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="index.html" class="navbar-brand">Sparkle</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Help</a></li>
         </ul>
