added a bad-looking container with info

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,13 @@
     </div>
 </nav>
 
+<div class="container-fluid row" id="sparkle_info">
+    <div class="col-md-8 big_text"> <H1>Sparkle</H1> <br> <H3>-- your perfect calendar & planner</H3> </div>
+    <div class="col-md-4">Please, sign up before continuing</div>
+    <div></div>
+</div>
+
+<span>
 <!-- jQuery library -->
 <script src="http://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
@@ -40,6 +47,7 @@
 
 <!-- Latest compiled and minified Bootstrap JavaScript -->
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+</span>
 
 </body>
 </html>
